--- a/css/icon-set-duoton.sass
+++ b/css/icon-set-duoton.sass
@@ -17,3 +17,6 @@
 .teilen-duoton > circle,
 .zeitraum-duoton > path
   fill: $icon-set-duoton
+
+.diamant-duoton > polygon:not(:first-child)
+  stroke-linejoin: bevel !important
