--- a/css/icon-set.sass
+++ b/css/icon-set.sass
@@ -1,2 +1,7 @@
-@import icon-set-linie.sass
+@import icon-set-linie-schmal.sass
+@import icon-set-linie-dick.sass
+
 @import icon-set-duoton.sass
+@import icon-set-flaeche.sass
+
+@import icon-set-basis.sass
