--- a/css/browser.sass
+++ b/css/browser.sass
@@ -5,10 +5,10 @@
   width: 4px
   height: 4px
   z-index: 5
-  background: $basis-farbe-2
+  background: $basis-color-2
 
 ::-webkit-scrollbar-thumb:vertical
-  background: $basis-farbe-1
+  background: $basis-color-1
 
 ::-webkit-scrollbar-thumb:horizontal
-  background: $basis-farbe-1
+  background: $basis-color-1
