--- a/css/icon-set/icon-set-duoton.sass
+++ b/css/icon-set/icon-set-duoton.sass
@@ -1,66 +1,66 @@
 @import ../variablen.sass
 
-// Dauer
-.dauer-duoton > path:last-child
-  fill: $icon-set-duoton !important
+// durance
+.durance-duoton > path:last-child
+  fill: $icon-set-fill-color !important
 
-// Dreieck
-.dreieck-duoton > polygon
-  fill: $icon-set-duoton !important
+// triangle
+.triangle-duoton > polygon
+  fill: $icon-set-fill-color !important
 
-// Information
+// information
 .information-1-duoton > polyline
-  fill: $icon-set-duoton !important
+  fill: $icon-set-fill-color !important
 
 .information-2-duoton > polygon
-  fill: $icon-set-duoton !important
+  fill: $icon-set-fill-color !important
 
 .information-2-duoton > polyline
-  fill: $basis-farbe-2 !important
+  fill: $basis-color-2 !important
 
-// Kreis
-.kreis-duoton > circle
-  fill: $icon-set-duoton !important
+// circle
+.circle-duoton > circle
+  fill: $icon-set-fill-color !important
 
-// Mail
+// mail
 .mail-duoton > polygon:first-child
-  fill: $icon-set-duoton !important
+  fill: $icon-set-fill-color !important
 
-// Ort
-.ort-duoton > path
-  fill: $icon-set-duoton !important
+// location
+.location-duoton > path
+  fill: $icon-set-fill-color !important
 
 // Pause
 .pause-duoton > rect
-  fill: $icon-set-duoton !important
+  fill: $icon-set-fill-color !important
 
 // Play
 .play-duoton > polygon
-  fill: $icon-set-duoton !important
+  fill: $icon-set-fill-color !important
 
-// Priorität
-.prioritaet-duoton > polygon
-  fill: $icon-set-duoton !important
+// priority
+.priority-duoton > polygon
+  fill: $icon-set-fill-color !important
 
-// Schwierigkeitsgrad
-.schwierigkeitsgrad-duoton > polygon
-  fill: $icon-set-duoton !important
+// complexity
+.complexity-duoton > polygon
+  fill: $icon-set-fill-color !important
 
-// Herz
-.herz-duoton > path
-  fill: $icon-set-duoton !important
+// heart
+.heart-duoton > path
+  fill: $icon-set-fill-color !important
 
-// Stern
-.stern-duoton > polygon
-  fill: $icon-set-duoton !important
+// star
+.star-duoton > polygon
+  fill: $icon-set-fill-color !important
 
-// Differenz-Icon
-.differenz-duoton > path:first-child
-  fill: $icon-set-duoton !important
+// difference-Icon
+.difference-duoton > path:first-child
+  fill: $icon-set-fill-color !important
 
-// Diamant-Icon
-.diamant-duoton > polygon:first-child,
-.diamant-duoton > polygon:nth-child(3),
-.diamant-duoton > polygon:nth-child(6),
-.diamant-duoton > polygon:nth-child(5)
-  fill: $icon-set-duoton !important
+// diamond-Icon
+.diamond-duoton > polygon:first-child,
+.diamond-duoton > polygon:nth-child(3),
+.diamond-duoton > polygon:nth-child(6),
+.diamond-duoton > polygon:nth-child(5)
+  fill: $icon-set-fill-color !important
