--- a/css/icon-set/icon-set-line-thick.sass
+++ b/css/icon-set/icon-set-line-thick.sass
@@ -7,19 +7,12 @@
 .icon-set-line-thick > polygon,
 .icon-set-line-thick > circle,
 .icon-set-line-thick > rect,
-  stroke: $icon-set-line-color
-  stroke-miterlimit: 10
-
-.triangle > polygon,
-.priority > polygon,
-.play > polygon,
-  stroke-linecap: square
+  fill: none
+  stroke-width: 3px
+  stroke: $basis-color-1
 
 .date > rect,
 .exchange > rect,
 .sort > rect
   fill: $icon-set-line-color !important
   stroke: none !important
-
-.diamond > polygon:not(:last-child), .diamond-duoton > polygon:not(:last-child), .diamond-flaeche > polygon:not(:last-child)
-  stroke-linejoin: bevel !important
