--- a/css/reset.sass
+++ b/css/reset.sass
@@ -57,7 +57,7 @@ sub
 sup
   top: -0.5em
 
-//Zurücksetzen des Standard-Stylings für geordnete/ungeordnete Listen
+//Zurücksetzen des Standard-Stylings für geordnete/ungeordnete listn
 ul, ol
   list-style: none
 
@@ -198,6 +198,6 @@ input:hover, input:focus, input:active, textarea:hover, textarea:focus, textarea
   white-space: nowrap
   direction: ltr
   -webkit-font-smoothing: antialiased
-  text-rendering: optimizeLegibility
+  text-rendring: optimizeLegibility
   -moz-osx-font-smoothing: grayscale
   font-feature-settings: 'liga'
