--- a/css/struktur.sass
+++ b/css/struktur.sass
@@ -63,7 +63,7 @@
   display: flex
   justify-content: space-around
   align-items: center
-  border-bottom: 1px $kommentar-farbe-1 solid
+  border-bottom: 1px $comment-color-1 solid
 
 #IconSetNavigation > li > a > section > h4
   text-align: center
@@ -71,7 +71,7 @@
 
 #IconSetNavigation > li > a > section > p
   text-align: center
-  color: $kommentar-farbe-1
+  color: $comment-color-1
   margin: 0px 0px 10px 0px
 
 #IconSetNavigation > li > a > section > svg
