--- a/css/typografie.sass
+++ b/css/typografie.sass
@@ -36,13 +36,13 @@ hr
   height: 4px
   margin: 40px 50% 40px 0px
   border: none
-  background-color: $basis-farbe-1
+  background-color: $basis-color-1
 
 footer > p
   margin: 0px 0px 10px 0px !important
 
 .Kommentar
-  color: $kommentar-farbe-1
+  color: $comment-color-1
   -webkit-transition: color 0.3s ease-in
   -moz-transition: color 0.3s ease-in
   -o-transition: color 0.3s ease-in
