--- a/css/variablen.sass
+++ b/css/variablen.sass
@@ -1,10 +1,10 @@
 // Basis-Farben
-$basis-farbe-1: rgb(0, 0, 0)
-$basis-farbe-2: rgb(255, 255, 255)
+$basis-color-1: rgb(0, 0, 0)
+$basis-color-2: rgb(255, 255, 255)
 
 // Kommentar-Farben
-$kommentar-farbe-1: rgb(128, 128, 128)
+$comment-color-1: rgb(128, 128, 128)
 
 // Icon-Set-Farben
-$icon-set-linie: rgb(0, 0, 0)
-$icon-set-duoton: rgba(170, 170, 170, 0.5)
+$icon-set-line-color: rgb(0, 0, 0)
+$icon-set-fill-color: rgba(170, 170, 170, 0.5)
